<resources>
    <string name="app_name">RBC News</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="update_error_toast">Unable to get fresh news, check the Internet connection</string>
    <string name="open_error_toast">Unable to open news, check the Internet connection</string>
    <string name="image_loading_summary">Allows you to enable or disable the download of images for news</string>
    <string name="image_loading_title">Download images</string>
    <string name="update_interval_summary">Select the news update interval</string>
    <string name="update_interval_title">Update interval</string>
    <string name="category_title">Newsa category</string>
    <string name="category_summary">Select news category</string>
    <string name="subcategory_title">News subcategory</string>
    <string name="subcategory_summary">Select news subscategory</string>
    <string-array name="update_interval">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
    </string-array>
    <string-array name="update_interval_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>16</item>
    </string-array>
    <string-array name="category_url">
        <item>Politics</item>
        <item>Economics</item>
        <item>Finances</item>
        <item>Business</item>
        <item>Technology and media</item>
        <item>Own business</item>
        <item>Money</item>
        <item>Auto</item>
        <item>Realty</item>
        <item>Sport</item>
    </string-array>
    <string-array name="category_url_values">
        <item>https://rbc.ru/politics/</item>
        <item>https://www.rbc.ru/economics/</item>
        <item>https://www.rbc.ru/finances/</item>
        <item>https://www.rbc.ru/business/</item>
        <item>https://www.rbc.ru/technology_and_media/</item>
        <item>https://www.rbc.ru/own_business/</item>
        <item>https://www.rbc.ru/money/</item>
        <item>https://www.autonews.ru/</item>
        <item>https://realty.rbc.ru/</item>
        <item>https://sport.rbc.ru/</item>
    </string-array>
    <string-array name="auto_subcategory">
        <item>All</item>
        <item>News</item>
        <item>Companies news</item>
        <item>Test Drives</item>
        <item>Novelties</item>
        <item>Video</item>
        <item>Articles</item>
        <item>Photos</item>
    </string-array>
    <string-array name="auto_subcategory_values">
        <item>Все</item>
        <item>Новости</item>
        <item>Новости компаний</item>
        <item>Тест-драйвы</item>
        <item>Новинки</item>
        <item>Видео</item>
        <item>Статьи</item>
        <item>Фото</item>
    </string-array>
    <string-array name="sport_subcategory">
        <item>All</item>
        <item>Football</item>
        <item>Hockey</item>
        <item>Single Combat</item>
        <item>Others</item>
    </string-array>
    <string-array name="sport_subcategory_values">
        <item>Все</item>
        <item>Футбол</item>
        <item>Хоккей</item>
        <item>Единоборства</item>
        <item>Другие</item>
    </string-array>
    <string-array name="realty_subcategory">
        <item>All</item>
        <item>City</item>
        <item>Housing</item>
        <item>Companies News</item>
    </string-array>
    <string-array name="realty_subcategory_values">
        <item>Все</item>
        <item>Город</item>
        <item>Жилье</item>
        <item>Новости компаний</item>
    </string-array>
    <string name="unable_to_get_news">There is no news for chosen category. Swipe down to refresh.</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="imageLoading">intervalLoading</string>
    <string name="intervalList">intervalList</string>
    <string name="categoryUrlList">categoryUrlList</string>
    <string name="subcategoryList">subcategoryList</string>
    <string name="title_activity_web">Web Activity</string>
</resources>
